[tool.poetry]
name = "repl_python3_AgendaBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
firebase-admin = "^5.0.0"
flask = "^1.1.2"
waitress = "^2.0.0"
nextcord = "^2.0.0-alpha.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
